--- a/src/components/dynamic/countryItem/CountryItem.module.css
+++ b/src/components/dynamic/countryItem/CountryItem.module.css
@@ -6,6 +6,7 @@
     background: #FFFFFF;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
+    cursor: pointer;
 
 }
 .numberBlock {
