--- a/src/components/static/tableHeader/TableHeader.module.css
+++ b/src/components/static/tableHeader/TableHeader.module.css
@@ -39,7 +39,8 @@
     border-top: 6px solid #dbdbdb;
     border-right: 6px solid #dbdbdb;
     border-radius: 4px;
-    transform: rotate(-45deg)
+    transform: rotate(-45deg);
+    cursor: pointer;
 }
 
 .up:hover{
@@ -59,7 +60,8 @@
     height: 10px;
     border-top: 6px solid #dbdbdb;
     border-right: 6px solid #dbdbdb;
-    transform: rotate(135deg)
+    transform: rotate(135deg);
+    cursor: pointer;
 }
 .down:hover{
     transform: scale(1.2) rotate(135deg);
